# haxxerz_chat

./: .gitmodules  CMakeLists.txt  Makefile  README.md
example/include/client/: chat_client.h  ui.h
example/include/encrypt_engine/: enc_eng.h
example/include/server/: chat_client.h  chat_server.h
example/src/client/: chat_client.cpp  main.cpp
example/src/encrypt_engine/: enc_eng.cpp
example/src/server/: chat_client.cpp  chat_server.cpp  main.cpp
include/: chatlib.h  cli.h  datatypes.hpp  server.h  socket.hpp
include/client/: cli.h  client.h  ui.h
include/core/: datatypes.hpp  encrypt_engine.h  semaphore.hpp
include/core/client/: client.h
include/core/server/: client.h  server.h
include/server/: client.h  datatypes.hpp  server.h
src/: cli.cpp  main-cli.cpp  main-srv.cpp  srv.cpp
src/client/: client.cpp  main.cpp  ui.cpp
src/client-core/: client.cpp
src/core/client/: client.cpp
src/core/server/: client.cpp  server.cpp
src/server/: client.cpp  main.cpp  server.cpp
